# UCE

./: .gitignore  LICENSE  MANIFEST.in  README.md  conda.yml  eval_data.py  eval_single_anndata.py  evaluate.py  model.py  phenomix.ipynb  pyproject.toml  requirements.txt  utils.py
data_proc/: Create New Species Files.ipynb  data_utils.py  download_proc_czi_cxg.py  gene_embeddings.py  preproc_many_dataset.py
examples/: Benchmark Embeddings with scIB.ipynb  Label Transfer Using Logistic Classifier.ipynb
model_files/: new_species_protein_embeddings.csv
notebooks/: demo.ipynb
uce/: __init__.py  eval_single_anndata.py  evaluate.py  model.py  utils.py
uce/data_proc/: data_utils.py  gene_embeddings.py  generate_reduced_chrom_files.py  preproc_many_dataset.py
